<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cup2"
    tools:context="com.mlab.kabelo.orderfree.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:background="#fff"
                android:hint="@string/name"
                android:textColor="#000" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:background="#723"
                android:text="@string/toppings"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/hasWhippedCream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:background="#fff" />

                <TextView
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="#723"
                    android:paddingLeft="15dp"
                    android:text="@string/whipped_cream"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/hasChocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="0dp"
                    android:background="#fff" />

                <TextView
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:background="#723"
                    android:paddingLeft="15dp"
                    android:text="@string/chocolate"
                    android:textColor="#fff" />
            </LinearLayout>


            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="16dp"
                android:background="#723"
                android:text="@string/quantity"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="05dp"
                    android:background="@drawable/minus_button"
                    android:onClick="decrement"
                    android:text="-"

                    android:textColor="#fff" />


                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="10dp"
                    android:background="#fff"
                    android:padding="8dp"
                    android:text="2"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="05dp"
                    android:background="@drawable/plus_button"
                    android:onClick="increment"
                    android:text=""
                    android:textColor="#fff" />

            </LinearLayout>


            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="100dp"
                android:background="#937"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
